// Copyright 2021 Datafuse Labs
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// The identifier of a database by name. Names can be changed.
// There is no guarantee that two get-database request by name will return the
// same instance.

syntax = "proto3";

package databend_proto;

import "datatype.proto";

// VirtualColumnMeta is a container of virtual columns information.
message VirtualColumnMeta {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  // The table_id virtual columns belong to.
  uint64 table_id = 1;

  // Exprs of each virtual columns.
  repeated string virtual_columns = 2;

  // The time virtual column created.
  string created_on = 3;

  // The time virtual column updated.
  optional string updated_on = 4;

  // virtual column data type
  repeated DataType data_types = 5;

  // virtual column alias names,
  // key is the index of `virtual_columns` field.
  map<uint64, string> alias_names = 6;

  // whether the virtual columns are auto-generated,
  // true for auto-generated, false for user-defined.
  bool auto_generated = 7;
}
